--- a/src/app/pages/player/player.component.scss
+++ b/src/app/pages/player/player.component.scss
@@ -1,4 +1,6 @@
 .container {
+  width: 100vw;
+
     .main-toolbar {
       .spacer {
         flex: 1 1 auto;
@@ -17,9 +19,9 @@
         font-size: 24px;
         color: #3f51b5;
         .mat-icon {
-          height: 160px !important;
-          width: 160px !important;
-          font-size: 160px !important;
+          height: 50px !important;
+          width: 50px !important;
+          font-size: 50px !important;
         }
       }
     }
